Fix for modal popping behind header. Fix for login modal showing in navbar for an instant before popping. Make learn more buttons go to section.

--- a/PHO-WebApp/PHO-WebApp/Content/Site.css
+++ b/PHO-WebApp/PHO-WebApp/Content/Site.css
@@ -87,7 +87,7 @@ tr.pho-table-data:nth-child(even) {
     right: 0;
     left: 0;
     top: 0;
-    z-index: 1030;
+    z-index:0 !important;
 }
 
 .Header-inner--top {
